@@ -111,8 +111,13 @@
 	        <rtexprvalue>false</rtexprvalue>
     	</attribute>
         <attribute>
+            <name>contentId</name>
+            <required>false</required>
+            <rtexprvalue>false</rtexprvalue>
+        </attribute>
+        <attribute>
             <name>propertyName</name>
-            <required>true</required>
+            <required>false</required>
             <rtexprvalue>false</rtexprvalue>
         </attribute>
         <attribute>
